Fix container overflow

--- a/src/sass/layouts/_strategy.scss
+++ b/src/sass/layouts/_strategy.scss
@@ -15,16 +15,23 @@
     display: flex;
     flex-direction: column;
     position: relative;
+
+    @include media('<lg') {
+      overflow: hidden;
+    }
   }
 
   &__bg-mockup {
     bottom: rem(50);
-    max-height: rem(420);
-    min-height: rem(420);
-    max-width: rem(410);
-    min-width: rem(410);
+    max-height: rem(400);
+    min-height: rem(400);
+    width: auto;
     position: absolute;
     right: rem(-50);
+
+    @include media('<lg') {
+      right: rem(-30);
+    }
   }
 
   &__title {
